--- a/src/pages/About/Aboutus.css
+++ b/src/pages/About/Aboutus.css
@@ -21,7 +21,8 @@
     left: 0;
     width: 100%;
     height: 700px;
-    background: url("/image1.png") center/cover no-repeat;
+    /* background-image: url('../image1.png') center/cover no-repeat;  */
+    /* background: url("/image1.png") center/cover no-repeat; */
     filter: brightness(40%);
   }
   
