--- a/src/pages/WhyChooseUs/WhyChooseUs.css
+++ b/src/pages/WhyChooseUs/WhyChooseUs.css
@@ -1,6 +1,5 @@
-/* Carousel background */
 .carousel-bg {
-    height: 400px; /* Adjust height as needed */
+    height: 400px; 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,14 +11,12 @@
     position: relative;
   }
   
-  /* Overlay content */
   .carousel-content {
-    background: rgba(0, 0, 0, 0.5); /* Dark transparent overlay */
+    background: rgba(0, 0, 0, 0.5); 
     padding: 20px;
     border-radius: 10px;
   }
   
-  /* Featurette Image Styling */
   .feature-img {
     width: 100%;
     height: 400px;
